Fix alignment of icons with headings.

--- a/assets/sass/headings.scss
+++ b/assets/sass/headings.scss
@@ -92,9 +92,6 @@
     color: var(--color-primary);
   }
 }
-.heading-icon svg {
-  margin-top: 3px;
-}
 
 h1, h2, h3, h4, h5 {
   svg {
